--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="c-picked"></p>
     <script>
         // Prompt the username
-        let username = prompt('Welcome to Bear Hunter')
+        let username = prompt('Welcome to Bear Hunter. Please type your name')
 
         let player = `${username}`
         // Print out welcome text
