--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         let player = `${username}`
         // Print out welcome text
-        alert('Hi ' + player + ` Let's Play!!`);
+        alert('Hi ' + player + ' Let\'s Play!!');
 
         // Prompt the choose
         let choose = prompt('Who are you: Bear, Ninja or Hunter?')
@@ -33,4 +33,3 @@
 </body>
 
 </html>
-
