--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         let choose = prompt('Who are you: Bear, Ninja or Hunter?')
 
         // Print out on console
-        console.log(player +", You picked " + choose + "!")
-        console.log("The computer picked " + choose + "!")
+        console.log(player + ", You picked " + choose + "!")
+        console.log("The computer picked Bear!")
 
         // Print out on HTML page
         document.getElementById("u-picked").innerHTML = player +", You picked " + choose + "!";
-        document.getElementById("c-picked").innerHTML = "The computer picked " + choose + "!";
+        document.getElementById("c-picked").innerHTML = "The computer picked Bear!";
     </script>
 </body>
 
